--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ nav ul li a
 {
     font-size: 70px;
     margin-top: 12%;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
 }
 button
 {
@@ -83,3 +85,18 @@ button
     right: 8%;
     bottom: 100px;
 }
+.btn
+{
+    background: #393939;
+    border: 0;
+    outline: none; 
+    padding: 15px 35px;
+    color: #fff;
+    margin-top: 35px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    cursor: pointer;
+    border-radius: 12px;
+    text-decoration: none;
+}
+
