--- a/style.css
+++ b/style.css
@@ -46,19 +46,22 @@ nav ul li a
     padding-bottom: 10px;
     margin-bottom: 15px;
 }
-button
+/* .btnn
 {
-    background: #393939;
+    background: whitesmoke;
     border: 0;
     outline: none; 
-    padding: 15px 35px;
+     padding-top:  15px 35px; 
     color: #fff;
-    margin-top: 25px;
     font-weight: 500;
     letter-spacing: 1px;
     cursor: pointer;
     border-radius: 12px;
-}
+    text-decoration: none;
+    color: black;
+    padding: auto;
+    margin: 35px 0 0;
+} */
 .indicator span
 {  
     display:inline-block;
@@ -100,3 +103,8 @@ button
     text-decoration: none;
 }
 
+.p
+{
+    margin: 20px;
+    padding: 20px 20px;
+}
